--- a/views/edit-held/ap.jade
+++ b/views/edit-held/ap.jade
@@ -1,46 +1,120 @@
+//- function definitions
+
+-	function contains(__array, __string) {
+-		if (typeof __array === "string") {
+-			return __array.indexOf(__string) > -1;
+-		}
+-		if (Array.isArray(__array)) {
+-			return __array.filter(function(item) {
+-				return item.indexOf(__string) > -1;
+-			}).length > 0;
+-		}
+-		return false;
+-	}
+-	function render(__str, __data) {
+-		Object.keys(__data).forEach(function(key) {
+-			__str = __str.replace("{"+key+"}", __data[key].toString());
+-		});
+-		return __str;
+-	}
+
+//- create a standard menu link
+mixin menuLink(__item, __data)
+	-     __data  = __data || {};
+	- var __title = render(__item.title, __data);
+	- var __url   = __item.url ? render(__item.url, __data) : null;
+	- var __curr  = __url === _Menu.currentURL;
+	-     __url   = __curr ? null : __url;
+	if Array.isArray(__item.dropdown)
+		+menuDropdown(__item, __data)
+	else
+		li(class=__curr ? "active" : null)
+			if Array.isArray(__item.sign)
+				a(href=__url, title=__title)
+					span.hidden-xs(class=__item.sign.join(" "))
+					span.visible-xs!=__title
+			else
+				a(href=__url)!=__title
+
+//- create a menu dropdown item
+mixin menuDropdown(__item, __data)
+	- __data  = __data || {};
+	li.dropdown
+		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
+			b.caret
+		ul.dropdown-menu
+			each __link in __item.dropdown
+				if __link.title
+					+menuLink(__link, __data)
+				else
+					li.divider
+
 doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
-		title AP vergeben
-		link(rel="stylesheet", type="text/css", href="/edit.css")
-		link(rel="stylesheet", type="text/css", href="/nav.css")
+		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – AP
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+		link(rel="stylesheet", href="/dcm-display.css")
+		script(src="//code.jquery.com/jquery-2.1.0.min.js")
+		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		style.
-			nav a {
-				width: 25%;
+			body {
+				padding-top:      60px;
 			}
-	body
-		nav
-			ul#main-menu
-				li
-					a(href="#top") [Seitenanfang]
-				li
-					a(href="#save") [speichern]
-				li
-					a(href="/held/"+_id, title="Heldenbogen")= "⇒ "+Person.Name.split(' ')[0]
-		header#top
-			h1.mitte
-				a(href="/held/"+_id)= Person.Name
-		main
-			form(action="/ap/"+_id, method="post", accept-charset="utf-8")
+			input {
+				width:            100%;
+			}
+	body#top
+		nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+			.container-fluid
+				.navbar-header
+					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
+						span.sr-only Navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					span.navbar-brand DCM
+				#navbar-collapse-chars.collapse.navbar-collapse
+					ul.nav.navbar-nav
+						li
+							a(href="/held/"+_Held._id) ► Heldenbogen
+						if _Held.SF && (contains(_Held.SF.magisch, "Ritualkenntnis") || contains(_Held.SF.magisch, "Repräsentation"))
+							li
+								a(href="/magie/"+_Held._id) ► Magiebogen
+						if _Held.SF && contains(_Held.SF.geweiht, "Liturgiekenntnis")
+							li
+								a(href="/weihe/"+_Held._id) ► Liturgiebogen
+						li
+							a(href="/helden") Meine Helden
+					ul.nav.navbar-nav.navbar-right
+						- var data = { id: _Held._id, name: _Held.Person.Name.split(" ")[0] }
+						each __link in _Menu.right
+							+menuLink(__link, data)
+		header.container
+			.page-header.text-center
+				h1=_Held.Person.Name
+		main.container
+			form(action="/ap/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
-				
-				table.data-section.mitte.eigenschaften
-					caption Abenteuerpunkte
-					colgroup
-						col(style="width: 15%")
-						col(style="width: 35%")
-						col(style="width: 15%")
-						col(style="width: 35%")
-					tbody
-						tr
-							th 
-								label(for="alle") gesamt:
-							td 
-								input#alle.mitte(type="number", name="AP[alle]", min="0", value=AP.alle)
-							th 
-								label(for="frei") frei:
-							td 
-								input#frei.mitte(type="number", name="AP[frei]", min="0", value=AP.frei)
-				.mitte#save
-					button(type="submit") speichern
+				// Abenteuerpunkte
+				section.panel.panel-default#ap
+					.panel-heading.dcm-caption Abenteuerpunkte
+					.panel-body.text-center
+						.container-fluid
+							.row.dcm-row
+								.col-xs-6.col-sm-3.dcm-header
+									label(for="alle") gesamt:
+								.col-xs-6.col-sm-3
+									input#alle.text-center(type="number", name="AP[alle]", min="0", step="1", value=_Held.AP.alle)
+								.col-xs-6.col-sm-3.dcm-header
+									label(for="frei") verfügbar:
+								.col-xs-6.col-sm-3
+									input#frei.text-center(type="number", name="AP[frei]", min=0-_Held.AP.alle, step="1", value=_Held.AP.frei)
+				.well.text-center#save
+					.row.dcm-row
+						.col-sm-4.col-sm-offset-1
+							button.form-control.btn.btn-success(type="submit") speichern
+						.col-sm-4.col-sm-offset-2
+							a.form-control.btn.btn-warning(href="/held/"+_Held._id) zurück
