--- a/views/edit-held/attribute.jade
+++ b/views/edit-held/attribute.jade
@@ -1,55 +1,144 @@
+//- function definitions
+
+-	function contains(__array, __string) {
+-		if (typeof __array === "string") {
+-			return __array.indexOf(__string) > -1;
+-		}
+-		if (Array.isArray(__array)) {
+-			return __array.filter(function(item) {
+-				return item.indexOf(__string) > -1;
+-			}).length > 0;
+-		}
+-		return false;
+-	}
+-	function render(__str, __data) {
+-		Object.keys(__data).forEach(function(key) {
+-			__str = __str.replace("{"+key+"}", __data[key].toString());
+-		});
+-		return __str;
+-	}
+
+//- create a standard menu link
+mixin menuLink(__item, __data)
+	-     __data  = __data || {};
+	- var __title = render(__item.title, __data);
+	- var __url   = __item.url ? render(__item.url, __data) : null;
+	- var __curr  = __url === _Menu.currentURL;
+	-     __url   = __curr ? null : __url;
+	if Array.isArray(__item.dropdown)
+		+menuDropdown(__item, __data)
+	else
+		li(class=__curr ? "active" : null)
+			if Array.isArray(__item.sign)
+				a(href=__url, title=__title)
+					span.hidden-xs(class=__item.sign.join(" "))
+					span.visible-xs!=__title
+			else
+				a(href=__url)!=__title
+
+//- create a menu dropdown item
+mixin menuDropdown(__item, __data)
+	- __data  = __data || {};
+	li.dropdown
+		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
+			b.caret
+		ul.dropdown-menu
+			each __link in __item.dropdown
+				if __link.title
+					+menuLink(__link, __data)
+				else
+					li.divider
+
 doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
-		title #{Person.Name.split(' ')[0]} bearbeiten
-		link(rel="stylesheet", type="text/css", href="/edit.css")
-		link(rel="stylesheet", type="text/css", href="/nav.css")
-		script(type="text/javascript", src="/jquery-2.0.3.min.js")
+		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Attribute
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+		link(rel="stylesheet", href="/dcm-display.css")
+		script(src="//code.jquery.com/jquery-2.1.0.min.js")
+		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		style.
-			.setting tbody tr:nth-child(odd) {
-				background-color: #eee;
+			body {
+				padding-top:      60px;
 			}
-	body
-		nav
-			ul#main-menu
-				li
-					a(href="#top") [Seitenanfang]
-				li
-					a(href="#save") [speichern]
-				li
-					a(href="/held/"+_id, title="Heldenbogen")= "⇒ "+Person.Name.split(' ')[0]
-		header#top
-			h1.mitte
-				a(href="/held/"+_id)= Person.Name
-		
-		main
-			form(action="/attribute/"+_id, method="post", accept-charset="utf-8")#newChar
+			.dcm-gap-bottom {
+				margin-bottom:    1em;
+			}
+			/* overwrite */
+			.form-group {
+				margin-top:       7px;
+				margin-bottom:    8px;
+			}
+	body#top
+		nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+			.container-fluid
+				.navbar-header
+					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
+						span.sr-only Navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					span.navbar-brand DCM
+				#navbar-collapse-chars.collapse.navbar-collapse
+					ul.nav.navbar-nav
+						li
+							a(href="/held/"+_Held._id) ► Heldenbogen
+						if _Held.SF && (contains(_Held.SF.magisch, "Ritualkenntnis") || contains(_Held.SF.magisch, "Repräsentation"))
+							li
+								a(href="/magie/"+_Held._id) ► Magiebogen
+						if _Held.SF && contains(_Held.SF.geweiht, "Liturgiekenntnis")
+							li
+								a(href="/weihe/"+_Held._id) ► Liturgiebogen
+						li
+							a(href="/helden") Meine Helden
+					ul.nav.navbar-nav.navbar-right
+						- var data = { id: _Held._id, name: _Held.Person.Name.split(" ")[0] }
+						each __link in _Menu.right
+							+menuLink(__link, data)
+		header.container
+			.page-header.text-center
+				h1=_Held.Person.Name
+		main.container
+			form.form-horizontal(action="/attribute/"+_Held._id, method="post", accept-charset="utf-8")#newChar
 				input(type="hidden", name="_method", value="put")
-			
-				table.data-section.talente#att
-					caption Attribute
-					colgroup
-						col(style="width: 40%")
-						col(span="3")
-					thead
-						tr
-							th Eigenschaft
-							th Modifikator
-							th Startwert
-							th aktueller Wert
-					tbody
-						each __val, __key in {Mut:"MU", Klugheit:"KL", Intuition:"IN", Charisma:"CH", Fingerfertigkeit:"FF", Gewandheit:"GE", Konstitution:"KO", Körperkraft:"KK"}
-							tr
-								td= __key
-								td 
-									input(name="Attribute[#{__val}][mod]", type="number", min="-10", max="10", step="1", value=Attribute[__val].mod)
-								td 
-									input(name="Attribute[#{__val}][start]", type="number", min="0", step="1", value=Attribute[__val].start)
-								td 
-									input(name="Attribute[#{__val}][wert]", type="number", min="0", step="1", value=Attribute[__val].wert)
-				.mitte#save
-					button(type="submit", disabled) speichern
-					button(type="reset")  zurücksetzen
-
-		script $('button:disabled').prop('disabled', false);
+				// Attribute
+				section.panel.panel-default#att
+					.panel-heading.dcm-caption Attribute
+					.panel-body
+						.container-fluid.text-center.dcm-gap-bottom
+							.row.dcm-row
+								.col-sm-4
+									.dcm-header.dcm-border Eigenschaft
+								.col-sm-7.col-sm-offset-1
+									.row
+										.col-sm-4
+											.dcm-header.dcm-border Modifikator
+										.col-sm-4
+											.dcm-header.dcm-border Startwert
+										.col-sm-4
+											.dcm-header.dcm-border aktueller Wert
+						.container-fluid.dcm-striped
+							each val, key in { Mut:"MU", Klugheit:"KL", Intuition:"IN", Charisma:"CH", Fingerfertigkeit:"FF", Gewandheit:"GE", Konstitution:"KO", Körperkraft:"KK" }
+								.row
+									.form-group.container-fluid
+										.col-sm-3.col-sm-offset-1
+											label.control-label=key+":"
+										.col-sm-7.col-sm-offset-1
+											.row
+												.col-sm-4.col-md-2.col-md-offset-1
+													label.sr-only(for=val+"mod") Modifikator (#{key})
+													input.form-control.text-center(name="Attribute[#{val}][mod]", type="number", min="-10", max="10", step="1", value=_Held.Attribute[val].mod, id=val+"mod")
+												.col-sm-4.col-md-2.col-md-offset-2
+													label.sr-only(for=val+"start") Startwert (#{key})
+													input.form-control.text-center(name="Attribute[#{val}][start]", type="number", min="0", step="1", value=_Held.Attribute[val].start, id=val+"start")
+												.col-sm-4.col-md-2.col-md-offset-2
+													label.sr-only(for=val+"wert") aktueller Wert (#{key})
+													input.form-control.text-center(name="Attribute[#{val}][wert]", type="number", min="0", step="1", value=_Held.Attribute[val].wert, id=val+"wert")
+				.well.text-center#save
+					.row.dcm-row
+						.col-sm-4.col-sm-offset-1
+							button.form-control.btn.btn-success(type="submit") speichern
+						.col-sm-4.col-sm-offset-2
+							a.form-control.btn.btn-warning(href="/held/"+_Held._id) zurück
