--- a/views/edit-held/generierung.jade
+++ b/views/edit-held/generierung.jade
@@ -1,64 +1,128 @@
+//- function definitions
+
+-	function contains(__array, __string) {
+-		if (typeof __array === "string") {
+-			return __array.indexOf(__string) > -1;
+-		}
+-		if (Array.isArray(__array)) {
+-			return __array.filter(function(item) {
+-				return item.indexOf(__string) > -1;
+-			}).length > 0;
+-		}
+-		return false;
+-	}
+-	function render(__str, __data) {
+-		Object.keys(__data).forEach(function(key) {
+-			__str = __str.replace("{"+key+"}", __data[key].toString());
+-		});
+-		return __str;
+-	}
+
+//- create a standard menu link
+mixin menuLink(__item, __data)
+	-     __data  = __data || {};
+	- var __title = render(__item.title, __data);
+	- var __url   = __item.url ? render(__item.url, __data) : null;
+	- var __curr  = __url === _Menu.currentURL;
+	-     __url   = __curr ? null : __url;
+	if Array.isArray(__item.dropdown)
+		+menuDropdown(__item, __data)
+	else
+		li(class=__curr ? "active" : null)
+			if Array.isArray(__item.sign)
+				a(href=__url, title=__title)
+					span.hidden-xs(class=__item.sign.join(" "))
+					span.visible-xs!=__title
+			else
+				a(href=__url)!=__title
+
+//- create a menu dropdown item
+mixin menuDropdown(__item, __data)
+	- __data  = __data || {};
+	li.dropdown
+		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
+			b.caret
+		ul.dropdown-menu
+			each __link in __item.dropdown
+				if __link.title
+					+menuLink(__link, __data)
+				else
+					li.divider
+
 doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
-		title #{Person.Name.split(' ')[0]} bearbeiten
-		link(rel="stylesheet", type="text/css", href="/edit.css")
-		link(rel="stylesheet", type="text/css", href="/nav.css")
-		script(type="text/javascript", src="/jquery-2.0.3.min.js")
+		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Generierung
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+		link(rel="stylesheet", href="/dcm-display.css")
+		script(src="//code.jquery.com/jquery-2.1.0.min.js")
+		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		style.
-			.setting tbody tr:nth-child(odd) {
-				background-color: #eee;
+			body {
+				padding-top:      60px;
 			}
-	body
-		nav
-			ul#main-menu
-				li
-					a(href="#top") [Seitenanfang]
-				li
-					a(href="#save") [speichern]
-				li
-					a(href="/held/"+_id, title="Heldenbogen")= "⇒ "+Person.Name.split(' ')[0]
-		header#top
-			h1.mitte
-				a(href="/held/"+_id)= Person.Name
-		
-		main
-			form(action="/generierung/"+_id, method="post", accept-charset="utf-8")#newChar
+	body#top
+		nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+			.container-fluid
+				.navbar-header
+					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
+						span.sr-only Navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					span.navbar-brand DCM
+				#navbar-collapse-chars.collapse.navbar-collapse
+					ul.nav.navbar-nav
+						li
+							a(href="/held/"+_Held._id) ► Heldenbogen
+						if _Held.SF && (contains(_Held.SF.magisch, "Ritualkenntnis") || contains(_Held.SF.magisch, "Repräsentation"))
+							li
+								a(href="/magie/"+_Held._id) ► Magiebogen
+						if _Held.SF && contains(_Held.SF.geweiht, "Liturgiekenntnis")
+							li
+								a(href="/weihe/"+_Held._id) ► Liturgiebogen
+						li
+							a(href="/helden") Meine Helden
+					ul.nav.navbar-nav.navbar-right
+						- var data = { id: _Held._id, name: _Held.Person.Name.split(" ")[0] }
+						each __link in _Menu.right
+							+menuLink(__link, data)
+		header.container
+			.page-header.text-center
+				h1=_Held.Person.Name
+		main.container
+			form.form-horizontal(action="/generierung/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
-			
-				table.data-section.talente.links#gen
-					caption Generierung
-					colgroup
-						col(style="width: 20%")
-						col(span="2")
-					tbody
-						each __val, __key in ["Rasse", "Kultur", "Profession", "BgB"]
-							if Generierung[__val]
-								- var __name = Generierung[__val].name
-								- var __mod  = Generierung[__val].modifikation
-							else
-								- var __name = ''
-								- var __mod  = ''
-							tr
-								td 
-									label(for="rkp"+__key, id="rkp#{__key}lab") #{__val}:
-								td 
-									input.fullSize(name="Generierung[#{__val}][name]", id="rkp"+__key, type="text", placeholder=__val, value=__name)
-								td
-									input.fullSize(name="Generierung[#{__val}][modifikation]", id="rkp#{__key}mod", type="text", placeholder=__val+"-Modifikaton(en)", value=__mod)
-				.mitte#save
-					button(type="submit", disabled) speichern
-					button(type="reset")  zurücksetzen
-
+				// Generierung
+				section.panel.panel-default#gen
+					.panel-heading.dcm-caption Generierung
+					.panel-body
+						.container-fluid
+							each __val, idx in ["Rasse", "Kultur", "Profession", "BgB"]
+								.form-group
+									label.control-label.col-sm-2(for="rkp"+idx, id="rkp"+idx+"lbl")=__val+":"
+									.col-sm-4
+										input.form-control(name="Generierung[#{__val}][name]", id="rkp"+idx, type="text", value=_Held.Generierung[__val].name, placeholder=__val)
+									.col-sm-5
+										label.sr-only(for="rkp"+idx+"mod") Modifikationen
+										input.form-control(name="Generierung[#{__val}][modifikation]", id="rkp"+idx+"mod", type="text", value=_Held.Generierung[__val].modifikation, placeholder=__val+"-Modifikation(en)")
+					script.
+						(function() {
+							var $inputs = $('#rkp3, #rkp3mod');
+							$inputs.prop('disabled', true);
+							$('#rkp3lbl')
+								.attr('title', 'Zum (De-)Aktivieren klicken')
+								.on("click", function() { 
+									$inputs.prop('disabled', !$inputs.prop('disabled') );
+								});
+						})();
+				.well.text-center#save
+					.row.dcm-row
+						.col-sm-4.col-sm-offset-1
+							button.form-control.btn.btn-success(type="submit", disabled) speichern
+						.col-sm-4.col-sm-offset-2
+							a.form-control.btn.btn-warning(href="/held/"+_Held._id) zurück
 		script.
-			(function() {
-				var $inputs = $('#rkp3, #rkp3mod');
-				$inputs.prop('disabled', true);
-				$('#rkp3lab')
-					.attr('title', 'Zum (De-)Aktivieren klicken')
-					.on("click", function() { 
-						$inputs.prop('disabled', !$inputs.prop('disabled') );
-					});
-			})();
 			$('button:disabled').prop('disabled', false);
