--- a/views/edit-held/rucksack.jade
+++ b/views/edit-held/rucksack.jade
@@ -1,65 +1,150 @@
+//- function definitions
+
+-	function contains(__array, __string) {
+-		if (typeof __array === "string") {
+-			return __array.indexOf(__string) > -1;
+-		}
+-		if (Array.isArray(__array)) {
+-			return __array.filter(function(item) {
+-				return item.indexOf(__string) > -1;
+-			}).length > 0;
+-		}
+-		return false;
+-	}
+-	function render(__str, __data) {
+-		Object.keys(__data).forEach(function(key) {
+-			__str = __str.replace("{"+key+"}", __data[key].toString());
+-		});
+-		return __str;
+-	}
+
+//- create a standard menu link
+mixin menuLink(__item, __data)
+	-     __data  = __data || {};
+	- var __title = render(__item.title, __data);
+	- var __url   = __item.url ? render(__item.url, __data) : null;
+	- var __curr  = __url === _Menu.currentURL;
+	-     __url   = __curr ? null : __url;
+	if Array.isArray(__item.dropdown)
+		+menuDropdown(__item, __data)
+	else
+		li(class=__curr ? "active" : null)
+			if Array.isArray(__item.sign)
+				a(href=__url, title=__title)
+					span.hidden-xs(class=__item.sign.join(" "))
+					span.visible-xs!=__title
+			else
+				a(href=__url)!=__title
+
+//- create a menu dropdown item
+mixin menuDropdown(__item, __data)
+	- __data  = __data || {};
+	li.dropdown
+		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
+			b.caret
+		ul.dropdown-menu
+			each __link in __item.dropdown
+				if __link.title
+					+menuLink(__link, __data)
+				else
+					li.divider
+
 doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
-		title Ausrüstung
-		link(rel="stylesheet", type="text/css", href="/edit.css")
-		link(rel="stylesheet", type="text/css", href="/nav.css")
-		script(src="/jquery-2.0.3.min.js")
-	body
-		nav
-			ul#main-menu
-				li
-					a(href="#top") [Seitenanfang]
-				li
-					a(href="#save") [speichern]
-				li
-					a(href="/held/"+_id, title="Heldenbogen")= "⇒ "+Person.Name.split(' ')[0]
-		header#top
-			h1.mitte
-				a(href="/held/"+_id)= Person.Name
-		main
-			form(action="/rucksack/"+_id, method="post", accept-charset="utf-8")
+		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Ausrüstung
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+		link(rel="stylesheet", href="/dcm-display.css")
+		script(src="//code.jquery.com/jquery-2.1.0.min.js")
+		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+		style.
+			body {
+				padding-top:      60px;
+			}
+			.dcm-gap-bottom {
+				margin-bottom:    1em;
+			}
+			/* overwrite */
+			.form-group {
+				margin-top:       7px;
+				margin-bottom:    8px;
+			}
+			input[type="number"] {
+				max-width: 5em;
+			}
+	body#top
+		nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+			.container-fluid
+				.navbar-header
+					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
+						span.sr-only Navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					span.navbar-brand DCM
+				#navbar-collapse-chars.collapse.navbar-collapse
+					ul.nav.navbar-nav
+						li
+							a(href="/held/"+_Held._id) ► Heldenbogen
+						if _Held.SF && (contains(_Held.SF.magisch, "Ritualkenntnis") || contains(_Held.SF.magisch, "Repräsentation"))
+							li
+								a(href="/magie/"+_Held._id) ► Magiebogen
+						if _Held.SF && contains(_Held.SF.geweiht, "Liturgiekenntnis")
+							li
+								a(href="/weihe/"+_Held._id) ► Liturgiebogen
+						li
+							a(href="/helden") Meine Helden
+					ul.nav.navbar-nav.navbar-right
+						- var data = { id: _Held._id, name: _Held.Person.Name.split(" ")[0] }
+						each __link in _Menu.right
+							+menuLink(__link, data)
+		header.container
+			.page-header.text-center
+				h1=_Held.Person.Name
+		main.container
+			form.form-horizontal(action="/rucksack/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
-				
-				table.data-section.talente
-					caption Gegenstände
-					colgroup
-						col(style="width: 8em")
-						col(span="2")
-						col(style="width: 5em;")
-					thead
-						tr
-							th Anzahl
-							th Bezeichnung
-							th Kommentar
-							td
-					tfoot
-						tr
-							td
-								input(type="number", name="Ausrüstung.Rucksack[{index}][Anzahl]", value="1", min="0", step="1")
-							td
-								input.fullSize(type="text", name="Ausrüstung.Rucksack[{index}][Name]", placeholder="Bezeichnung")
-							td
-								input.fullSize(type="text", name="Ausrüstung.Rucksack[{index}][Kommentar]", placeholder="Kommentar")
-							td
-								button#add(type="button") neu
-					tbody
-						if Ausrüstung && Ausrüstung.Rucksack
-							each __item, __idx in Ausrüstung.Rucksack
-								tr
-									td
-										input(type="number", name="Ausrüstung.Rucksack[#{__idx}][Anzahl]", value=__item.Anzahl, min="0", step="1")
-									td
-										input.fullSize(type="text", name="Ausrüstung.Rucksack[#{__idx}][Name]", placeholder="Bezeichnung", value=__item.Name)
-									td
-										input.fullSize(type="text", name="Ausrüstung.Rucksack[#{__idx}][Kommentar]", placeholder="Kommentar", value=__item.Kommentar)
-									td
-				.mitte
-					button(type="submit", disabled) speichern
-					
-			form(action="/waffen/Rucksack/"+_id, method="post", accept-charset="utf-8")
+				// Ausrüstung
+				section.panel.panel-default
+					.panel-heading.text-center.dcm-caption Ausrüstung
+					.panel-body
+						.container-fluid
+							if _Held.Ausrüstung && Array.isArray(_Held.Ausrüstung.Rucksack)
+								each __item, __idx in _Held.Ausrüstung.Rucksack
+									.form-group
+										.col-xs-3.col-md-2.col-lg-1
+											label.sr-only(for="eqp-1-"+_idx) Anzahl
+											input.form-control.text-center(name="Ausrüstung.Rucksack[#{__idx}][Anzahl]", type="number", value=__item.Anzahl, min="0", step="1", id="eqp-1-"+_idx)
+										.col-xs-9.col-md-4.col-lg-5
+											label.sr-only(for="eqp-2-"+_idx) 
+											input.form-control(name="Ausrüstung.Rucksack[#{__idx}][Name]", type="text", value=__item.Name, id="eqp-2-"+_idx, placeholder="Bezeichnung")
+										.col-xs-3.hidden-md.hidden-lg &nbsp;
+										.col-xs-9.col-md-6
+											label.sr-only(for="eqp-3-"+_idx) 
+											input.form-control(name="Ausrüstung.Rucksack[#{__idx}][Kommentar]", type="text", value=__item.Kommentar, id="eqp-3-"+_idx, placeholder="Kommentar")
+					.panel-footer
+						.container-fluid
+							.form-group
+								.col-xs-3.col-md-2.col-lg-1
+									input.form-control.text-center(name="Ausrüstung.Rucksack[{index}][Anzahl]", type="number", min="0", step="1", value="1")
+								.col-xs-9.col-md-4.col-lg-5
+									input.form-control(name="Ausrüstung.Rucksack[{index}][Name]", type="text", placeholder="Bezeichnung")
+								.col-xs-3.hidden-md.hidden-lg &nbsp;
+								.col-xs-9.col-md-6
+									input.form-control(name="Ausrüstung.Rucksack[{index}][Kommentar]", type="text", placeholder="Kommentar")
+							.row
+								.col-xs-8.col-xs-offset-2.col-sm-4.col-sm-offset-4
+									button#add.btn.btn-default.form-control(type="button") hinzufügen
+				.well.text-center#save
+					.row.dcm-row
+						.col-xs-8.col-xs-offset-2.col-sm-4.col-sm-offset-4
+							button.btn.btn-success.form-control(type="submit", disabled) speichern
+			form.form(action="/waffen/Rucksack/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="delete")
-				.mitte
-					button(type="submit", disabled) alle Gegenstände löschen
+				.well.text-center
+					.row.dcm-row
+						.col-xs-8.col-xs-offset-2.col-sm-4.col-sm-offset-4
+							button.btn.btn-danger.form-control(type="submit", disabled) alle Gegenstände löschen
 		script(src="/edit-rucksack.js")
