--- a/views/held/new-char.jade
+++ b/views/held/new-char.jade
@@ -1,39 +1,4 @@
--	function render(__str, __data) {
--		Object.keys(__data).forEach(function(key) {
--			__str = __str.replace("{"+key+"}", __data[key].toString());
--		});
--		return __str;
--	}
-
-//- create a standard menu link
-mixin menuLink(__item, __data)
-	-     __data  = __data || {};
-	- var __curr  = __item.url === _Menu.currentURL;
-	- var __url   = __item.url ? (__curr ? null : render(__item.url, __data)) : null;
-	- var __title = render(__item.title, __data);
-	if Array.isArray(__item.dropdown)
-		+menuDropdown(__item, __data)
-	else
-		li(class=__curr ? "active" : null)
-			if Array.isArray(__item.sign)
-				a(href=__url, title=__title)
-					span.hidden-xs(class=__item.sign.join(" "))
-					span.visible-xs!=__title
-			else
-				a(href=__url)!=__title
-
-//- create a menu dropdown item
-mixin menuDropdown(__item, __data)
-	- __data  = __data || {};
-	li.dropdown
-		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
-			b.caret
-		ul.dropdown-menu
-			each __link in __item.dropdown
-				if __link.title
-					+menuLink(__link, __data)
-				else
-					li.divider
+include ../inc-mixins
 
 mixin dropdown(__list, __prefix)
 	- var __lock = __prefix === null;
