--- a/views/edit-held/attribute.jade
+++ b/views/edit-held/attribute.jade
@@ -1,64 +1,11 @@
-//- function definitions
-
--	function contains(__array, __string) {
--		if (typeof __array === "string") {
--			return __array.indexOf(__string) > -1;
--		}
--		if (Array.isArray(__array)) {
--			return __array.filter(function(item) {
--				return item.indexOf(__string) > -1;
--			}).length > 0;
--		}
--		return false;
--	}
--	function render(__str, __data) {
--		Object.keys(__data).forEach(function(key) {
--			__str = __str.replace("{"+key+"}", __data[key].toString());
--		});
--		return __str;
--	}
-
-//- create a standard menu link
-mixin menuLink(__item, __data)
-	-     __data  = __data || {};
-	- var __title = render(__item.title, __data);
-	- var __url   = __item.url ? render(__item.url, __data) : null;
-	- var __curr  = __url === _Menu.currentURL;
-	-     __url   = __curr ? null : __url;
-	if Array.isArray(__item.dropdown)
-		+menuDropdown(__item, __data)
-	else
-		li(class=__curr ? "active" : null)
-			if Array.isArray(__item.sign)
-				a(href=__url, title=__title)
-					span.hidden-xs(class=__item.sign.join(" "))
-					span.visible-xs!=__title
-			else
-				a(href=__url)!=__title
-
-//- create a menu dropdown item
-mixin menuDropdown(__item, __data)
-	- __data  = __data || {};
-	li.dropdown
-		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
-			b.caret
-		ul.dropdown-menu
-			each __link in __item.dropdown
-				if __link.title
-					+menuLink(__link, __data)
-				else
-					li.divider
+include ../inc-mixins
 
 doctype html
 html(lang="de")
 	head
-		meta(charset="utf-8")
+		include ../inc-bootstrap
 		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Attribute
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
 		link(rel="stylesheet", href="/dcm-display.css")
-		script(src="//code.jquery.com/jquery-2.1.0.min.js")
-		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		style.
 			body {
 				padding-top:      60px;
@@ -72,31 +19,7 @@ html(lang="de")
 				margin-bottom:    8px;
 			}
 	body#top
-		nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
-			.container-fluid
-				.navbar-header
-					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
-						span.sr-only Navigation
-						span.icon-bar
-						span.icon-bar
-						span.icon-bar
-					span.navbar-brand DCM
-				#navbar-collapse-chars.collapse.navbar-collapse
-					ul.nav.navbar-nav
-						li
-							a(href="/held/"+_Held._id) ► Heldenbogen
-						if _Held.SF && (contains(_Held.SF.magisch, "Ritualkenntnis") || contains(_Held.SF.magisch, "Repräsentation"))
-							li
-								a(href="/magie/"+_Held._id) ► Magiebogen
-						if _Held.SF && contains(_Held.SF.geweiht, "Liturgiekenntnis")
-							li
-								a(href="/weihe/"+_Held._id) ► Liturgiebogen
-						li
-							a(href="/helden") Meine Helden
-					ul.nav.navbar-nav.navbar-right
-						- var data = { id: _Held._id, name: _Held.Person.Name.split(" ")[0] }
-						each __link in _Menu.right
-							+menuLink(__link, data)
+		include inc/nav
 		header.container
 			.page-header.text-center
 				h1=_Held.Person.Name
